# interactive-art-project

./: .env  .gitignore  Dockerfile  Dockerfile.moderngl  Dockerfile.moderngl.backup  camera_fix_patch.py  check_environment.py  check_gpu.bat  config.json  diagnostic_fix_script.py  docker-compose.yml  docker-compose.yml.backup  docker-entrypoint.sh  final_integration_test.py  fps_fix_patch.py  gpu_enabler_windows.py  install_dependencies.bat  main.py  migrate_to_pygame.py  requirements.txt  requirements.txt.backup  requirements_old.txt  run_final_tests.ps1  set_gpu_env.bat  setup_aqua_mirror_gpu.py  setup_environment.sh  setup_instructions.sh  shader_fix_patch.py  start_aqua_mirror.bat  start_aqua_mirror_pygame.bat  step_by_step_test.sh  test_migration.bat  test_new_vision.py  troubleshoot.bat
config/: config-week2.json  config.json  gpu_config.json  gpu_config_windows.json  migration_config.json
cpp/: CMakeLists.txt
cpp/cuda/: resize_kernel.cu
docs/: week1_completion_report.md
migration_backup/aqua_mirror_backup_20250702_213528/: README.md  backup_info.json
migration_backup/aqua_mirror_backup_20250702_213814/: backup_info.json
src/: app.py  coonfig_loader.py  scene.py  vision.py  visionctr.py
src/audio/: advanced_audio_engine.py
src/core/: app.py  camera_manager.py  camera_troubleshoot.py  config_loader.py  error_manager.py  gpu_processor.py  gpu_troubleshho.py  moderngl_app.py  moderngl_app_day2.py  performance_monitor.py  pygame_moderngl_app.py
src/effects/: __init__.py  (+1 more)
tests/: test_aqua_mirror_basic.py  test_gpu_setup.py  test_integration_final.py
(+42 files in other folders)
